--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '22'
           cache: 'npm'
 
       - name: Install dependencies
@@ -50,8 +50,8 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         run: |
-            VITE_APP_ENVIRONMENT=production \
-              npx semantic-release
+          VITE_APP_ENVIRONMENT=production \
+            npx semantic-release
 
   deployBackendToStaging:
     name: Deploy Block Explorer backend to staging
@@ -81,19 +81,19 @@ jobs:
 
       - name: Auth to google artifact registry
         run: |
-          gcloud auth configure-docker us-docker.pkg.dev -q 
+          gcloud auth configure-docker us-docker.pkg.dev -q
 
       - name: Build and push Docker image for API
         uses: docker/build-push-action@v4
         with:
           push: true
           tags: |
-              "matterlabs/block-explorer-api:latest"
-              "matterlabs/block-explorer-api:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
-              "matterlabs/block-explorer-api:${{ steps.setVersionForFlux.outputs.imageTag }}"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-api:latest"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-api:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-api:${{ steps.setVersionForFlux.outputs.imageTag }}"
+            "matterlabs/block-explorer-api:latest"
+            "matterlabs/block-explorer-api:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
+            "matterlabs/block-explorer-api:${{ steps.setVersionForFlux.outputs.imageTag }}"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-api:latest"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-api:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-api:${{ steps.setVersionForFlux.outputs.imageTag }}"
           file: packages/api/Dockerfile
           no-cache: true
 
@@ -102,12 +102,12 @@ jobs:
         with:
           push: true
           tags: |
-              "matterlabs/block-explorer-worker:latest"
-              "matterlabs/block-explorer-worker:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
-              "matterlabs/block-explorer-worker:${{ steps.setVersionForFlux.outputs.imageTag }}"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-worker:latest"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-worker:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-worker:${{ steps.setVersionForFlux.outputs.imageTag }}"
+            "matterlabs/block-explorer-worker:latest"
+            "matterlabs/block-explorer-worker:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
+            "matterlabs/block-explorer-worker:${{ steps.setVersionForFlux.outputs.imageTag }}"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-worker:latest"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-worker:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-worker:${{ steps.setVersionForFlux.outputs.imageTag }}"
           file: packages/worker/Dockerfile
           no-cache: true
 
@@ -116,12 +116,12 @@ jobs:
         with:
           push: true
           tags: |
-              "matterlabs/block-explorer-data-fetcher:latest"
-              "matterlabs/block-explorer-data-fetcher:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
-              "matterlabs/block-explorer-data-fetcher:${{ steps.setVersionForFlux.outputs.imageTag }}"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-data-fetcher:latest"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-data-fetcher:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-data-fetcher:${{ steps.setVersionForFlux.outputs.imageTag }}"
+            "matterlabs/block-explorer-data-fetcher:latest"
+            "matterlabs/block-explorer-data-fetcher:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
+            "matterlabs/block-explorer-data-fetcher:${{ steps.setVersionForFlux.outputs.imageTag }}"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-data-fetcher:latest"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-data-fetcher:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-data-fetcher:${{ steps.setVersionForFlux.outputs.imageTag }}"
           file: packages/data-fetcher/Dockerfile
           no-cache: true
 
@@ -130,12 +130,12 @@ jobs:
         with:
           push: true
           tags: |
-              "matterlabs/block-explorer-app:latest"
-              "matterlabs/block-explorer-app:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
-              "matterlabs/block-explorer-app:${{ steps.setVersionForFlux.outputs.imageTag }}"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-app:latest"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-app:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
-              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-app:${{ steps.setVersionForFlux.outputs.imageTag }}"
+            "matterlabs/block-explorer-app:latest"
+            "matterlabs/block-explorer-app:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
+            "matterlabs/block-explorer-app:${{ steps.setVersionForFlux.outputs.imageTag }}"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-app:latest"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-app:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
+            "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-app:${{ steps.setVersionForFlux.outputs.imageTag }}"
           file: packages/app/Dockerfile
           no-cache: true
 
@@ -154,7 +154,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 22
 
       - name: Install Firebase CLI and auth
         run: |
@@ -163,9 +163,9 @@ jobs:
       - name: Download Dist package
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-          version: "tags/v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
-          file: "dist.zip"
-          target: "dist.zip"
+          version: 'tags/v${{ needs.createReleaseVersion.outputs.releaseVersion }}'
+          file: 'dist.zip'
+          target: 'dist.zip'
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Unzip Dist package
@@ -179,9 +179,9 @@ jobs:
       - name: Download Storybook package
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-          version: "tags/v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
-          file: "storybook-static.zip"
-          target: "storybook-static.zip"
+          version: 'tags/v${{ needs.createReleaseVersion.outputs.releaseVersion }}'
+          file: 'storybook-static.zip'
+          target: 'storybook-static.zip'
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Unzip Storybook package
@@ -192,4 +192,3 @@ jobs:
         working-directory: ./packages/app
         run: |
           firebase --project staging-scan-v2 deploy
-
