--- a/.github/workflows/nodejs-license.yaml
+++ b/.github/workflows/nodejs-license.yaml
@@ -21,11 +21,12 @@ env:
     Unlicense;
     UNLICENSED;
     BlueOak-1.0.0;
+    LGPL-3.0-or-later;
   # gitconfiglocal@1.0.0 - BSD-3-Clause
   # glob-to-regexp@0.3.0 - BSD-2-Clause
   # map-stream@0.1.0 - MIT
   # It has to be one line, there must be no space between packages.
-  EXCLUDE_PACKAGES: gitconfiglocal@1.0.0;glob-to-regexp@0.3.0;map-stream@0.1.0;@img/sharp-libvips-linux-x64@1.0.4
+  EXCLUDE_PACKAGES: gitconfiglocal@1.0.0;glob-to-regexp@0.3.0;map-stream@0.1.0;
 
 jobs:
   generate-matrix:
