--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -37,7 +37,6 @@
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "0.14.0",
-    "cookie-session": "^2.1.0",
     "ethers": "6.13.4",
     "helmet": "^6.0.0",
     "jest-mock-extended": "^3.0.1",
@@ -49,16 +48,13 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "siwe": "^3.0.0",
     "typeorm": "^0.3.16",
-    "winston": "^3.8.2",
-    "zod": "^3.24.4"
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/supertest": "^2.0.11",
@@ -66,7 +62,6 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "express": "^4.18.2",
     "jest": "29.2.1",
     "jest-junit": "^14.0.1",
     "lint-staged": "^13.0.3",
@@ -75,8 +70,7 @@
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.0",
-    "zksync-ethers": "^6.14.0"
+    "tsconfig-paths": "4.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
