--- a/packages/app/src/configs/local.config.json
+++ b/packages/app/src/configs/local.config.json
@@ -2,17 +2,17 @@
   "networks": [
     {
       "apiUrl": "http://localhost:3020",
-      "bridgeUrl": "http://localhost:3000/bridge",
+      "bridgeUrl": "https://portal.sophon.xyz/bridge/",
       "hostnames": [
-        "localhost"
+        "Sophon"
       ],
       "icon": "/images/icons/zksync-arrows.svg",
-      "l2ChainId": 270,
-      "l2NetworkName": "Local",
+      "l2ChainId": 50104,
+      "l2NetworkName": "Sophon",
       "maintenance": false,
-      "name": "local",
+      "name": "Sophon",
       "published": true,
-      "rpcUrl": "http://localhost:3050",
+      "rpcUrl": "https://rpc.sophon.xyz/",
       "baseTokenAddress": "0x000000000000000000000000000000000000800A"
     }
   ]
