feat: add prividium e2e tests and workflow fixes

--- a/.github/workflows/app-deploy-preview.yml
+++ b/.github/workflows/app-deploy-preview.yml
@@ -89,5 +89,6 @@ jobs:
       targetUrl: ${{ needs.deploy.outputs.dappUrl }}
       testnet_network_value_for_e2e: "/?network=sepolia"
       default_network_value_for_e2e: "/?network=mainnet"
+      prividium_network_value_for_e2e: "/?network=prividium"
       publish_to_allure: true
       environmentTags: "and not @featureEnv"
