--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -23,6 +23,10 @@ on:
           type: string
           default: '/?network=sepolia'
           required: true
+      prividium_network_value_for_e2e:
+          type: string
+          default: '/?network=prividium'
+          required: true
       publish_to_allure: #Here we define the variable that can be overwritten by caller workflow
         type: boolean
         description: "Publish test results to allure"
@@ -56,7 +60,8 @@ jobs:
                 "@redirectionSet3",
                 "@copying",
                 "@search",
-                "@testnetSmokeSuite"
+                "@testnetSmokeSuite",
+                "@prividium"
               ]
 
     name: '${{ matrix.tags }}'
@@ -111,6 +116,9 @@ jobs:
             if [ "${{ matrix.tags }}" = "@testnetSmokeSuite" ]; then
                 echo "Run in testnetSmokeSuite only"
                 E2ENETWORK='${{ inputs.testnet_network_value_for_e2e }}' npx cucumber-js --tags "${{ matrix.tags }} ${{ inputs.environmentTags }} and not @mainnet"
+            elif [ "${{ matrix.tags }}" = "@prividium" ]; then
+                echo "Run in prividium mode"
+                E2ENETWORK='${{ inputs.prividium_network_value_for_e2e }}' npx cucumber-js --tags "${{ matrix.tags }} ${{ inputs.environmentTags }}"
             else
                 echo "Run in mainnet"
                 E2ENETWORK='${{ inputs.default_network_value_for_e2e }}' npx cucumber-js --tags "${{ matrix.tags }} ${{ inputs.environmentTags }} and not @testnet"
