fix: update docker command syntax in prividium-e2e workflow

--- a/.github/workflows/prividium-e2e.yml
+++ b/.github/workflows/prividium-e2e.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Start Prividium Services
         run: |
           # Start only the essential services for testing
-          docker-compose -f docker-compose-prividium.yaml up -d postgres
+          docker compose -f docker-compose-prividium.yaml up -d postgres
           
           # Wait for postgres to be ready
           sleep 10
