fix: update app start command in prividium-e2e workflow

--- a/.github/workflows/prividium-e2e.yml
+++ b/.github/workflows/prividium-e2e.yml
@@ -50,7 +50,7 @@ jobs:
           
           # Start the app with Prividium config
           cd packages/app
-          npm run preview -- --host 0.0.0.0 --port 3010 &
+          npm run start &
           
           # Wait for app to start
           sleep 5
