--- a/.github/workflows/prividium-e2e.yml
+++ b/.github/workflows/prividium-e2e.yml
@@ -40,20 +40,14 @@ jobs:
           PRIVIDIUM_MODE: true
           BASE_TOKEN_ADDRESS: "0x000000000000000000000000000000000000800A"
 
-      - name: Start Prividium Services
+      - name: Start Prividium App
         run: |
-          # Start only the essential services for testing
-          docker compose -f docker-compose-prividium.yaml up -d postgres
-          
-          # Wait for postgres to be ready
-          sleep 10
-          
-          # Start the app with Prividium config
+          # Start the app in development mode with Prividium config
           cd packages/app
-          npm run start &
+          npm run dev -- --host 0.0.0.0 --port 3010 &
           
           # Wait for app to start
-          sleep 5
+          sleep 10
         env:
           PRIVIDIUM: true
           USE_DYNAMIC_CONFIG: true
