chore: fix license check

--- a/.github/workflows/nodejs-license.yaml
+++ b/.github/workflows/nodejs-license.yaml
@@ -25,8 +25,9 @@ env:
   # gitconfiglocal@1.0.0 - BSD-3-Clause
   # glob-to-regexp@0.3.0 - BSD-2-Clause
   # map-stream@0.1.0 - MIT
+  # @metamask/sdk-communication-layer@0.33.0 - Custom license from MetaMask SDK
   # It has to be one line, there must be no space between packages.
-  EXCLUDE_PACKAGES: gitconfiglocal@1.0.0;glob-to-regexp@0.3.0;map-stream@0.1.0;
+  EXCLUDE_PACKAGES: gitconfiglocal@1.0.0;glob-to-regexp@0.3.0;map-stream@0.1.0;@metamask/sdk-communication-layer@0.33.0;
 
 jobs:
   generate-matrix:
