fix: use era logo for era group

--- a/packages/app/src/configs/local.config.json
+++ b/packages/app/src/configs/local.config.json
@@ -1,6 +1,7 @@
 {
   "networks": [
     {
+      "groupId": "era",
       "apiUrl": "http://localhost:3020",
       "bridgeUrl": "http://localhost:3000/bridge",
       "hostnames": [
