refactor: move prividium filtering from middleware to controllers
Remove prividium filtering middleware and implement access control directly
in controllers using @User() decorator. Add contract ownership detection
and restrict data visibility based on user authentication.

--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
   "engines": {
     "npm": ">=9.0.0",
     "node": ">=18.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
