--- a/prividium-permissions.yaml
+++ b/prividium-permissions.yaml
@@ -1,4 +1,5 @@
-whitelisted_wallets: "all"
+whitelisted_wallets:
+  - "0x15d34AAf54267DB7D7c367839AAf71A00a2C6A65"  # authorized test wallet
 
 groups:
   - name: "group1"
