--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -15,7 +15,6 @@ DISABLE_EXTERNAL_API=false
 DATABASE_STATEMENT_TIMEOUT_MS=90000
 CONTRACT_VERIFICATION_API_URL=http://127.0.0.1:3070
 NETWORK_NAME=testnet-sepolia
-APP_URL=http://localhost:3010
 
 BASE_TOKEN_SYMBOL=ETH
 BASE_TOKEN_DECIMALS=18
@@ -35,6 +34,7 @@ ETH_TOKEN_USDPRICE=1800
 
 # Prividium
 PRIVIDIUM=false
+PRIVIDIUM_APP_URL=http://localhost:3010
 PRIVIDIUM_SESSION_SECRET=secret
 PRIVIDIUM_PRIVATE_RPC_URL=http://private-rpc:3000
 PRIVIDIUM_PRIVATE_RPC_SECRET=secret
