--- a/packages/api/.env.prividium-test
+++ b/packages/api/.env.prividium-test
@@ -12,7 +12,6 @@ BASE_TOKEN_NAME=Ether
 BASE_TOKEN_LIQUIDITY=220000000000
 BASE_TOKEN_USDPRICE=1800
 ETH_TOKEN_L2_ADDRESS=0x000000000000000000000000000000000000800A
-APP_URL=http://127.0.0.1
 
 SESSION_SECRET="sososecret"
 PRIVIDIUM="true"
@@ -21,3 +20,6 @@ PRIVIDIUM_SESSION_SAME_SITE="strict"
 PRIVIDIUM_PRIVATE_RPC_URL="http://localhost:3050/rpc"
 PRIVIDIUM_PRIVATE_RPC_SECRET="sososecret"
 PRIVIDIUM_CHAIN_ID="324"
+PRIVIDIUM_SESSION_SECRET="sososecret"
+PRIVIDIUM_SIWE_EXPIRATION_TIME="600000"
+PRIVIDIUM_APP_URL=http://127.0.0.1
