fix: update environment configuration for Prividium

--- a/packages/api/.env.prividium-test
+++ b/packages/api/.env.prividium-test
@@ -21,3 +21,6 @@ PRIVIDIUM_SESSION_SAME_SITE="strict"
 PRIVIDIUM_PRIVATE_RPC_URL="http://localhost:3050/rpc"
 PRIVIDIUM_PRIVATE_RPC_SECRET="sososecret"
 PRIVIDIUM_CHAIN_ID="324"
+PRIVIDIUM_SESSION_SECRET="sososecret"
+PRIVIDIUM_SIWE_EXPIRATION_TIME="600000"
+PRIVIDIUM_APP_URL=http://127.0.0.1
