--- a/.github/workflows/prividium-e2e.yml
+++ b/.github/workflows/prividium-e2e.yml
@@ -112,35 +112,19 @@ jobs:
             sleep 5
           done
 
-      - name: Build App (Prividium Mode)
-        run: |
-          cd packages/app
-          npm run build
-        env:
-          PRIVIDIUM: true
-          USE_DYNAMIC_CONFIG: true
-          API_URL: http://localhost:3020
-          BASE_URL: http://127.0.0.1:3010
-          L2_CHAIN_ID: 270
-          L2_NETWORK_NAME: Prividium
-          NETWORK_NAME: Prividium
-          RPC_URL: http://localhost:4000
-          PRIVIDIUM_MODE: true
-          BASE_TOKEN_ADDRESS: "0x000000000000000000000000000000000000800A"
-
       - name: Generate Prividium Config
         run: |
           # Create temporary Prividium config.js
           cat > packages/app/public/config.js << 'EOF'
           window["##runtimeConfig"] = {
-            appEnvironment: "default",
+            appEnvironment: "prividium",
             environmentConfig: {
               networks: [
                 {
                   name: "prividium",
                   l2NetworkName: "prividium",
-                  l2ChainId: 271,
-                  rpcUrl: "http://127.0.0.1:4041/rpc",
+                  l2ChainId: 270,
+                  rpcUrl: "http://127.0.0.1:4040",
                   apiUrl: "http://127.0.0.1:3020",
                   baseTokenAddress: "0x000000000000000000000000000000000000800A",
                   hostnames: [],
@@ -175,15 +159,6 @@ jobs:
             echo "Waiting for app to start... attempt $i"
             sleep 5
           done
-        env:
-          PRIVIDIUM: true
-          USE_DYNAMIC_CONFIG: true
-          API_URL: http://localhost:3020
-          L2_CHAIN_ID: 270
-          L2_NETWORK_NAME: Prividium
-          NETWORK_NAME: Prividium
-          RPC_URL: http://localhost:4000
-          BASE_TOKEN_ADDRESS: "0x000000000000000000000000000000000000800A"
 
       - name: Run Prividium E2E Tests
         timeout-minutes: 5
