--- a/packages/api/.env.prividium-test
+++ b/packages/api/.env.prividium-test
@@ -21,3 +21,4 @@ PRIVIDIUM_SESSION_SAME_SITE="strict"
 PRIVIDIUM_PRIVATE_RPC_URL="http://localhost:3050/rpc"
 PRIVIDIUM_PRIVATE_RPC_SECRET="sososecret"
 PRIVIDIUM_CHAIN_ID="324"
+PRIVIDIUM_CHECK_WHITELIST="false"
