chore: test config for gateway

--- a/packages/app/src/configs/hyperchain.config.json
+++ b/packages/app/src/configs/hyperchain.config.json
@@ -1,6 +1,7 @@
 {
   "networks": [
     {
+      "groupId": "sophon",
       "apiUrl": "https://api-explorer.sophon.xyz",
       "verificationApiUrl": "https://verification-explorer.sophon.xyz",
       "bridgeUrl": "https://portal.sophon.xyz/bridge",
@@ -16,6 +17,7 @@
       "excludeTokenAddresses": []
     },
     {
+      "groupId": "sophon",
       "apiUrl": "https://block-explorer-api.testnet.sophon.xyz",
       "verificationApiUrl": "https://api-explorer-verify.testnet.sophon.xyz",
       "bridgeUrl": "https://portal.testnet.sophon.xyz/bridge",
@@ -29,6 +31,36 @@
       "published": true,
       "rpcUrl": "https://rpc.testnet.sophon.xyz",
       "excludeTokenAddresses": []
+    },
+    {
+      "groupId": "gateway",
+      "apiUrl": "https://block-explorer.era-gateway-testnet.zksync.dev",
+      "verificationApiUrl": "https://rpc-explorer-verify.era-gateway-testnet.zksync.dev",
+      "bridgeUrl": "https://portal.era-gateway-testnet.zksync.dev/bridge",
+      "hostnames": ["https://sepolia.gateway.explorer.zksync.io"],
+      "icon": "/images/icons/zksync-arrows.svg",
+      "l1ExplorerUrl": "https://sepolia.etherscan.io",
+      "l2ChainId": 32657,
+      "l2NetworkName": "ZKsync Gateway Testnet",
+      "maintenance": false,
+      "name": "gateway-testnet",
+      "published": true,
+      "rpcUrl": "https://rpc.era-gateway-testnet.zksync.dev"
+    },
+    {
+      "groupId": "gateway",
+      "apiUrl": "https://block-explorer-api.era-gateway-mainnet.zksync.dev",
+      "verificationApiUrl": "https://rpc-explorer-verify.era-gateway-mainnet.zksync.dev",
+      "bridgeUrl": "https://portal.era-gateway-mainnet.zksync.dev/bridge",
+      "hostnames": ["https://gateway.explorer.zksync.io"],
+      "icon": "/images/icons/zksync-arrows.svg",
+      "l1ExplorerUrl": "https://etherscan.io",
+      "l2ChainId": 9075,
+      "l2NetworkName": "ZKsync Gateway Mainnet",
+      "maintenance": false,
+      "name": "gateway-mainnet",
+      "published": true,
+      "rpcUrl": "https://rpc.era-gateway-mainnet.zksync.dev"
     }
   ]
 }
