fix: remove unwanted changes

--- a/.github/workflows/api-e2e.yml
+++ b/.github/workflows/api-e2e.yml
@@ -50,18 +50,18 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action/composite@v2
         if: always()
         with:
-          files: 'packages/api/e2e-junit.xml'
+          files: "packages/api/e2e-junit.xml"
           check_run_annotations: all tests, skipped tests
-          report_individual_runs: 'true'
+          report_individual_runs: "true"
           check_name: API E2E Test Results
 
       - name: Publish Prividium Test Results
         uses: EnricoMi/publish-unit-test-result-action/composite@v2
         if: always()
         with:
-          files: 'packages/api/prividium-e2e-junit.xml'
+          files: "packages/api/prividium-e2e-junit.xml"
           check_run_annotations: all tests, skipped tests
-          report_individual_runs: 'true'
+          report_individual_runs: "true"
           check_name: API Prividium E2E Test Results
 
       - name: Stop containers
