--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/providers": "^10.2.1",
-    "@tenkeylabs/dappwright": "^2.11.0",
+    "@tenkeylabs/dappwright": "2.11.2",
     "@vueuse/components": "8.9.2",
     "@vueuse/core": "8.9.2",
     "date-fns": "2.28.0",
@@ -51,7 +51,7 @@
     "@headlessui/vue": "1.5.0",
     "@heroicons/vue": "1.0.6",
     "@matterlabs/eslint-config-vue": "^1.1.4",
-    "@playwright/test": "1.27.0",
+    "@playwright/test": "1.54.1",
     "@rushstack/eslint-patch": "^1.1.0",
     "@sentry/cli": "^2.18.1",
     "@sentry/tracing": "^7.54.0",
@@ -87,7 +87,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "ethers": "6.13.4",
     "jsdom": "19.0.0",
-    "playwright": "1.27.0",
+    "playwright": "1.54.1",
     "postcss": "^8.4.12",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "sass": "^1.49.9",
