--- a/.github/workflows/prividium-e2e.yml
+++ b/.github/workflows/prividium-e2e.yml
@@ -53,7 +53,7 @@ jobs:
             res.setHeader('Access-Control-Allow-Origin', '*');
             res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
             res.setHeader('Access-Control-Allow-Headers', 'Content-Type, Authorization');
-            
+
             // Handle preflight requests
             if (req.method === 'OPTIONS') {
               res.writeHead(200);
@@ -212,6 +212,7 @@ jobs:
         timeout-minutes: 5
         run: |
           cd packages/app
+          mkdir -p tests/e2e/reports/
           xvfb-run --auto-servernum --server-args="-screen 0 1920x1080x24" \
             npx cucumber-js --tags "@prividium"
         env:
