--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -42,3 +42,4 @@ PRIVIDIUM_CHAIN_ID=300
 PRIVIDIUM_SESSION_MAX_AGE=86400000 # 1 day
 PRIVIDIUM_SESSION_SAME_SITE=none
 PRIVIDIUM_SIWE_EXPIRATION_TIME=600000 # 10 minutes
+PRIVIDIUM_PERMISSIONS_API_URL=http://localhost:8000
