--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/providers": "^10.2.1",
-    "@tenkeylabs/dappwright": "^2.11.0",
+    "@tenkeylabs/dappwright": "2.11.2",
     "@vueuse/components": "8.9.2",
     "@vueuse/core": "8.9.2",
     "date-fns": "2.28.0",
